<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_launch"
    tools:context=".SettingsFragment">

    <View
        android:id="@+id/settings_close_button"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/close"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settings"
        style="@style/news_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/semiboldttf"
        android:text="@string/settings"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/search_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_border"
        android:drawableStart="@drawable/search"
        android:fontFamily="@font/regular"
        android:gravity="top|center_horizontal"
        android:hint="@string/search_settings"
        android:paddingStart="8dp"
        android:paddingTop="5dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:textColorHint="@color/hint"
        android:textColor="@color/white"
        android:singleLine="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings" />

    <LinearLayout
        android:id="@+id/settings_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_field">

        <TextView
            android:id="@+id/watch"
            style="@style/settings_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/medium"
            android:text="@string/sky_watch"
            app:drawableEndCompat="@drawable/right" />

        <TextView
            android:id="@+id/space"
            style="@style/settings_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/medium"
            android:text="@string/space"
            app:drawableEndCompat="@drawable/right" />

        <TextView
            android:id="@+id/units"
            style="@style/settings_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/medium"
            android:text="@string/units"
            app:drawableEndCompat="@drawable/right" />

        <TextView
            android:id="@+id/gps"
            style="@style/settings_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/medium"
            android:text="@string/gps"
            app:drawableEndCompat="@drawable/right" />

        <TextView
            android:id="@+id/notifications"
            style="@style/settings_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/medium"
            android:text="@string/notifications"
            app:drawableEndCompat="@drawable/right" />

        <TextView
            android:id="@+id/help"
            style="@style/settings_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/medium"
            android:text="@string/help"
            app:drawableEndCompat="@drawable/right" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:src="@drawable/social_icons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>