<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_launch"
    tools:context=".UnitsFragment">

    <View
        android:id="@+id/settings_left_button"
        android:layout_width="12dp"
        android:layout_height="19dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/left"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/units_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/units_title"
        style="@style/settings_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/semibold"
        android:text="@string/units"
        app:layout_constraintLeft_toRightOf="@id/settings_left_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/light_years"
        style="@style/settings_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/medium"
        android:text="@string/light_years"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/units_title" />

    <TextView
        android:id="@+id/parsecs"
        style="@style/settings_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/medium"
        android:text="@string/parsecs"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/light_years" />

    <TextView
        android:id="@+id/astronomical_units"
        style="@style/settings_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/medium"
        android:text="@string/a_e"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/parsecs" />

</androidx.constraintlayout.widget.ConstraintLayout>