<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_launch"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageOfObject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/title_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:fontFamily="@font/medium"
        android:text="@string/spectr" />

    <TextView
        android:id="@+id/specOfObject"
        style="@style/info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_weight="1"
        android:fontFamily="@font/medium"
        android:textColor="@color/white" />

    <TextView
        style="@style/title_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_weight="1"
        android:fontFamily="@font/medium"
        android:text="@string/type" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_weight="1"
        android:divider="@drawable/divider"
        android:orientation="horizontal"
        android:showDividers="middle">

        <TextView
            android:id="@+id/type1"
            style="@style/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium" />

        <TextView
            android:id="@+id/type2"
            style="@style/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium" />
    </LinearLayout>

    <TextView
        style="@style/title_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_weight="1"
        android:fontFamily="@font/medium"
        android:text="@string/distance" />

    <TextView
        android:id="@+id/distance"
        style="@style/info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_weight="2"
        android:fontFamily="@font/medium" />
</LinearLayout>