<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/telescope"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/settings_button"
        android:layout_width="25dp"
        android:layout_height="17dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/settings_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/sky_view"
        android:layout_width="94dp"
        android:layout_height="94dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:foreground="@drawable/view_sky_back"
            android:src="@raw/view_sky" />
    </RelativeLayout>

    <TextView
        android:id="@+id/view_sky_text"
        android:layout_width="121dp"
        android:layout_height="22dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/semiboldttf"
        android:gravity="center"
        android:text="@string/view_sky_text"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sky_view"
        />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/space"
        android:layout_width="94dp"
        android:layout_height="94dp"
        android:layout_marginLeft="216dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:foreground="@drawable/view_sky_back"
            android:src="@raw/space" />
    </RelativeLayout>

    <TextView
        android:id="@+id/space_text"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginRight="-3dp"
        android:fontFamily="@font/semiboldttf"
        android:gravity="center_horizontal|top"
        android:text="@string/space"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="@id/space"
        app:layout_constraintTop_toBottomOf="@id/space" />

    <View
        android:id="@+id/menu"
        android:layout_width="31dp"
        android:layout_height="9dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/star_way"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="132dp"
        android:fontFamily="@font/bold"
        android:gravity="top"
        android:text="@string/star_way"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>